// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Counter /> > AtTotal story renders snapshot 1`] = `
<div
  class="_text_b3eba3 _text--body-sm_b3eba3 _counter_172002"
>
  <span
    class="_counter__count_172002"
  >
    10
  </span>
   / 
  10
</div>
`;

exports[`<Counter /> > CountChanging story renders snapshot 1`] = `
<div
  class="gap-spacing-size-1 flex w-[384px] flex-col"
>
  <input
    aria-label="Type to change the count"
    class="_input_0d9f86"
    value="Some initial text"
  />
  <div
    class="_text_b3eba3 _text--body-sm_b3eba3 _counter_172002"
  >
    <span
      class="_counter__count_172002"
    >
      17
    </span>
     / 
    20
  </div>
</div>
`;

exports[`<Counter /> > Default story renders snapshot 1`] = `
<div
  class="_text_b3eba3 _text--body-sm_b3eba3 _counter_172002"
>
  <span
    class="_counter__count_172002"
  >
    3
  </span>
   / 
  10
</div>
`;

exports[`<Counter /> > EmptyCount story renders snapshot 1`] = `
<div
  class="_text_b3eba3 _text--body-sm_b3eba3 _counter_172002"
>
  <span
    class="_counter__count_172002"
  >
    0
  </span>
   / 
  10
</div>
`;

exports[`<Counter /> > NegativeTotal story renders snapshot 1`] = `
<div
  class="_text_b3eba3 _text--body-sm_b3eba3 _counter_172002"
>
  <span
    class="_counter__count_172002 _counter__count--invalid_172002"
  >
    3
  </span>
   / 
  -10
</div>
`;

exports[`<Counter /> > OverTotal story renders snapshot 1`] = `
<div
  class="_text_b3eba3 _text--body-sm_b3eba3 _counter_172002"
>
  <span
    class="_counter__count_172002 _counter__count--invalid_172002"
  >
    12
  </span>
   / 
  10
</div>
`;

exports[`<Counter /> > Percentage story renders snapshot 1`] = `
<div
  class="_text_b3eba3 _text--body-sm_b3eba3 _counter_172002"
>
  <span
    class="_counter__count_172002"
  >
    30
    %
  </span>
</div>
`;

exports[`<Counter /> > PercentageChanging story renders snapshot 1`] = `
<div
  class="gap-spacing-size-1 flex w-[384px] flex-col"
>
  <input
    aria-label="Type to change the count"
    class="_input_0d9f86"
    value="Some initial text"
  />
  <div
    class="_text_b3eba3 _text--body-sm_b3eba3 _counter_172002"
  >
    <span
      class="_counter__count_172002"
    >
      85
      %
    </span>
  </div>
</div>
`;

exports[`<Counter /> > PercentageOverTotal story renders snapshot 1`] = `
<div
  class="_text_b3eba3 _text--body-sm_b3eba3 _counter_172002"
>
  <span
    class="_counter__count_172002 _counter__count--invalid_172002"
  >
    120
    %
  </span>
</div>
`;

exports[`<Counter /> > PercentageRounded story renders snapshot 1`] = `
<div
  class="_text_b3eba3 _text--body-sm_b3eba3 _counter_172002"
>
  <span
    class="_counter__count_172002"
  >
    33
    %
  </span>
</div>
`;

exports[`<Counter /> > PercentageZeroTotal story renders snapshot 1`] = `
<div
  class="_text_b3eba3 _text--body-sm_b3eba3 _counter_172002"
>
  <span
    class="_counter__count_172002 _counter__count--invalid_172002"
  >
    0
    %
  </span>
</div>
`;

exports[`<Counter /> > ZeroTotal story renders snapshot 1`] = `
<div
  class="_text_b3eba3 _text--body-sm_b3eba3 _counter_172002"
>
  <span
    class="_counter__count_172002 _counter__count--invalid_172002"
  >
    3
  </span>
   / 
  0
</div>
`;
